fixed alignment of dropdown icon

--- a/src/app/components/layout/side-menu/side-menu.component.css
+++ b/src/app/components/layout/side-menu/side-menu.component.css
@@ -36,3 +36,7 @@
 .hide {
   display: none;
 }
+
+.toggle-menu-items {
+  vertical-align: top;
+}
